Add references to Ewald's method

--- a/bibligrin.bib
+++ b/bibligrin.bib
@@ -11,16 +11,67 @@
   publisher={Wiley Online Library}
 }
 
+@article{belhadj1991molecular-dynamics,
+	title = {Molecular-Dynamics Simulations of Water with {Ewald}
+                  Summation for the Long-Range Electrostatic Interactions},
+	volume = {179},
+	issn = {0009-2614},
+	doi = {10.1016/0009-2614(91)90284-G},
+	abstract = {The use of a partial charge version of the Ewald sum method to treat long range electrostatic interactions in molecular dynamics simulations of water has been investigated. The orientational structure and energetic properties of the liquid have been studied for several choices of Ewald sum parameters. The results, including the dielectric constant epsilon-o, the radial-dependent Kirkwood factor G(k)(r), the orientational projection H-DELTA-(r), and the average dipole interaction energy, are compared with those from molecular dynamics simulations of water using the reaction field method. While the orientational structure of the liquid obtained from simulations which treat long range interactions by Ewald summation is different from corresponding results obtained from simulations with a reaction field, consistent values are calculated for the dielectric constant. The sensitivity of the results to variations in the convergence parameter alpha, the real-space cutoff R(c), and the number of vectors used in the reciprocal space sum was also analyzed.},
+	language = {English},
+	number = {1-2},
+	journal = {Chemical Physics Letters},
+	author = {Belhadj, M. and Alper, He and Levy, Rm},
+	month = apr,
+	year = {1991},
+	note = {Place: Amsterdam
+Publisher: Elsevier Science Bv
+WOS:A1991FH14300003},
+	keywords = {boundary-conditions, computer-simulations, constant, dependence, fluids, liquid water, monte-carlo, potentials, static dielectric-properties, system size},
+	pages = {13--20}
+}
+
 @article{brodka2004ewald,
-  title={Ewald Summation Method with Electrostatic Layer Correction
-                  for Interactions of Point Dipoles in Slab Geometry},
-  author={Br{\'o}dka, A},
-  journal={Chemical Physics Letters},
-  volume={400},
-  number={1-3},
-  pages={62--67},
-  year={2004},
-  publisher={Elsevier}
+	title = {Ewald Summation Method with Electrostatic Layer
+                  Correction for Interactions of Point Dipoles in Slab
+                  Geometry},
+	volume = {400},
+	issn = {0009-2614},
+	doi = {10.1016/j.cplett.2004.10.086},
+	abstract = {The Ewald method with electrostatic layer correction term for summing dipole-dipole interactions in slab geometry is presented. Theoretical cut-off errors in the electrostatic layer correction term as well as real- and reciprocal-space terms of the total energy are estimated, and their applicability is confirmed in numerical calculations. It is demonstrated that the summation method requires relative small gap of an empty space in the simulation box, and the theoretical errors can be used in determining optimal parameters of the method. (C) 2004 Elsevier B.V. All rights reserved.},
+	language = {English},
+	number = {1-3},
+	journal = {Chemical Physics Letters},
+	author = {Br{\'o}dka, A.},
+	month = dec,
+	year = {2004},
+	note = {Place: Amsterdam
+Publisher: Elsevier Science Bv
+WOS:000225679200013},
+	keywords = {2 directions, 3-dimensional system, charge, computer-simulations, cutoff errors, periodicity},
+	pages = {62--67}
+}
+
+@article{campione2012ewald,
+	title = {Ewald Method for {3D} Periodic Dyadic {Green}'s
+                  Functions and Complex Modes in Composite Materials
+                  made of Spherical Particles under the Dual Dipole
+                  Approximation},
+	volume = {47},
+	issn = {0048-6604},
+	doi = {10.1029/2012RS005031},
+	abstract = {We derive the Ewald representation for the dyadic periodic Green's functions to represent the electromagnetic field in a three dimensional (3D) periodic array of electric and magnetic dipoles. Then we use the developed theory to analyze the modes with real and complex wave number in a 3D periodic lattice of lead telluride (PbTe) microspheres at infrared frequencies and in a 3D periodic lattice of titanium dioxide (TiO2) microspheres at millimeter waves. Each microsphere is equivalently modeled with both an electric and a magnetic dipole, via a method here called the dual dipole approximation (DDA). The 3D lattices exhibit first a magnetic-induced then an electric-induced feature determined by microsphere magnetic and electric resonances. The DDA wave number results are compared to the ones computed with single electric or single magnetic dipole approximation and to the ones retrieved by using the Nicolson-Ross-Weir (NRW) retrieval method from reflection and transmission of finite thickness slabs computed by a full-wave simulation. It is shown that the DDA method is in very good agreement with NRW, in contrast to the previously reported single dipole approximation methods that fail to predict one of the two features (either electric or magnetic). A mode with transverse polarization is found to be dominant and able to propagate inside the lattice, and therefore the composite material can be treated as a homogeneous one with effective refractive index. This is obtained by adopting five different retrieval procedures for each lattice, and their agreement or disagreement is discussed.},
+	language = {English},
+	journal = {Radio Science},
+	author = {Campione, Salvatore and Capolino, Filippo},
+	month = sep,
+	year = {2012},
+	note = {Place: Washington
+Publisher: Amer Geophysical Union
+WOS:000316957000001},
+	keywords = {arrays, efficient computation, lattices, permittivity},
+	pages = {RS0N06},
+	file = {Full Text:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/6LT5VNIJ/Campione and Capolino - 2012 - Ewald method for 3D periodic dyadic Green's functi.pdf:application/pdf}
 }
 
 @article{clements2011mesenchymal,
@@ -64,7 +115,6 @@
 	file = {APS Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/TQ7DQYYF/PhysRev.137.html:text/html;Full Text PDF:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/6NW27PK2/de Wette and Schacher - 1965 - Internal Field in General Dipole Lattices.pdf:application/pdf}
 }
 
-
 @article{estevez2014porous,
   title={Porous {Silicon} Photonic Crystals},
   author={Estevez, J Octavio and Agarwal, Vivechana},
@@ -73,6 +123,20 @@
   year={2014},
   publisher={Springer International Publishing: Cham, Switzerland}
 
+}
+
+@article{ewald1921calculation,
+	title = {The calculation of optical and electrostatic grid potential},
+	volume = {64},
+	issn = {0003-3804},
+	language = {German},
+	number = {3},
+	journal = {Annalen Der Physik},
+	author = {Ewald, P. P.},
+	month = feb,
+	year = {1921},
+	note = {Place: Weinheim Publisher: Wiley-V C H Verlag Gmbh WOS:000201909400003},
+	pages = {253--287}
 }
 
 @article{fosdick2010two,
@@ -99,6 +163,28 @@
 	year = {1981},
 	note = {Publisher: NRC Research Press Ottawa, Canada},
 	file = {Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/YS9KB9DM/p81-120.html:text/html}
+}
+
+
+@article{grzybowski2000ewald,
+	title = {Ewald Summation of Electrostatic Interactions in
+                  Molecular Dynamics of a Three-Dimensional System
+                  with Periodicity in Two Directions},
+	volume = {61},
+	issn = {2469-9950},
+	doi = {10.1103/PhysRevB.61.6706},
+	abstract = {The Poisson summation formula is used to calculate the effective interaction of charged particles in a three-dimensional system with periodicity in two dimensions. The interaction energy expression is identical to that obtained from the Berthaut approach for the Gaussian spreading function, and its correspondence with the results of the Rhee-Halley-Hautman-Rahman method is shown. The formalism based on the Poisson summation formula is used also to calculate the interaction energy of point-dipole moments.},
+	language = {English},
+	number = {10},
+	journal = {Physical Review B},
+	author = {Grzybowski, A. and Gwozdz, E. and Brodka, A.},
+	month = mar,
+	year = {2000},
+	note = {Place: College Pk
+Publisher: Amer Physical Soc
+WOS:000085985800038},
+	keywords = {lattices, boundary-conditions},
+	pages = {6706--6712}
 }
 
 @article{inagi2010bipolar,
@@ -381,6 +467,25 @@ WOS:A1958WX86900005},
   volume={One}
 }
 
+@article{schmidt1997multipole,
+	title = {Multipole {Ewald} Sums for the Fast Multipole Method},
+	volume = {89},
+	issn = {0022-4715},
+	doi = {10.1007/BF02770773},
+	abstract = {A generalized Ewald summation for electric multipoles in periodic arrays is presented in the form needed for multipole transformations used in the fast multipole method. In the fast multipole method the time-consuming Ewald sums are thus eliminated in favor of a simple matrix transformation with almost no computational cost. The derivation also applies to traditional electrostatic potential calculations in periodic charged systems. A summary computational prescription is provided.},
+	language = {English},
+	number = {1-2},
+	journal = {Journal of Statistical Physics},
+	author = {Schmidt, K. E. and Lee, M. A.},
+	month = oct,
+	year = {1997},
+	note = {Place: New York
+Publisher: Plenum Publ Corp
+WOS:A1997YJ02200025},
+	keywords = {Ewald sum, fast multipole method, N-body problem},
+	pages = {411--424}
+}
+
 @book{stenzel2015physics,
   title={The Physics of Thin Film Optical Spectra},
   author={Stenzel, Olaf and others},
@@ -397,6 +502,24 @@ WOS:A1958WX86900005},
   pages={91--192},
   year={1997},
   publisher={Elsevier}
+}
+
+@article{toukmaji2000efficient,
+	title = {Efficient Particle-Mesh {Ewald} Based Approach to
+                  Fixed and Induced Dipolar Interactions},
+	volume = {113},
+	issn = {0021-9606},
+	url = {https://aip.scitation.org/doi/10.1063/1.1324708},
+	doi = {10.1063/1.1324708},
+	number = {24},
+	urldate = {2020-10-30},
+	journal = {The Journal of Chemical Physics},
+	author = {Toukmaji, Abdulnour and Sagui, Celeste and Board, John and Darden, Tom},
+	month = dec,
+	year = {2000},
+	note = {Publisher: American Institute of Physics},
+	pages = {10913--10927},
+	file = {Full Text PDF:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/E28QDGXY/Toukmaji et al. - 2000 - Efficient particle-mesh Ewald based approach to fi.pdf:application/pdf;Snapshot:/home/mochan/.mozilla/firefox/af5ppez9.default/zotero/storage/5EXC7RNV/1.html:text/html}
 }
 
 @article{wang2015screening,
