Revise up to results

--- a/paper.tex
+++ b/paper.tex
@@ -524,7 +524,7 @@ properties.
   \includegraphics[width=.8\textwidth]{paper-4}\\[12pt]
   \includegraphics[width=.8\textwidth]{paper-5}
 
-  \caption{Experimental set-up for
+  \caption{Schematic experimental set-up for
     the fabrication of GRIN PS structures. We show a side view of the
     electrochemical cell with the shape of a
     rectangular prism (top panel). We indicate the Si wafer (dark
@@ -537,7 +537,7 @@ properties.
     and the current source and a few schematic current flux
     lines. Top and side schematic views of the resulting sample
     (middle and lower panels),
-    illustrating eght regions $1\ldots8$ of decreasing porosity,
+    illustrating eight regions $1\ldots8$ of decreasing porosity,
     illustrating the changes in pore radii,
     length, and density and the porosity gradient.}
   \label{fig:DE1}
@@ -547,10 +547,10 @@ In Fig. \ref{fig:DE1} we show a schematic representation of our
 experimental setup to manufacture GRIN PS structures.
 As dicussed above, we fabricated an electrolytic cell with the shape of a
 rectangular prism on the bottom of which we place a Si wafer which makes
-electrical contact to a brass \notaC{ laton.}\notaL{Porqué
-  vivechna dice silver/copper?}
-\notaL{Lo inventé; de qué material es
-  el contacto bajo la muestra?} which together make the anode. The
+electrical contact to a brass plate\notaC{ laton.}\notaL{Porqué
+  vivechna dice silver/copper? De qué era: latón, plata, cobre, una
+  aleación de cobre y plata? Era un alambre o una placa?}
+which together make the anode. The
 cathode consists of a platinum wire insulated except for a small region
 at its tip, which we take as a point current drain.
 We also show a schematic drawing of the expected GRIN PS structures,
@@ -562,23 +562,18 @@ of the resulting pores.
 Single layer PS structures were fabricated through electrochemical
 anodization of (100) oriented $p$-type crystalline Si wafer
 (resistivity 0.002 - 0.005 $ \Omega\,\text{cm}$), under galvanostatic
-conditions. The process was performed at
-\notaC{room temperature, no controle latempertaura}
-,\notaL{OJO. No controlaste la temperatura} with an
+conditions. The process was performed at room temperatured with an
 electrolytic mixture of aqueous hydrofluoric
 acid (HF) (concentration 48\% wt), glycerol (purity 99.8 \% wt) and
-ethanol (purity 99.9\% wt) in a 3:7:1 volume ratio. \notaL{Checa que
-  todo esto sí corresponda a tus últimas muestras} \notaC{SI corresponde}
-   After the anodizing process, the samples were rinsed with
+ethanol (purity 99.9\% wt) in a 3:7:1 volume ratio.
+After the anodizing process, the samples were rinsed with
 ethanol (purity: 99.9 $ \% $  wt). The electrolytic cell had the shape
 of a rectangular prism as shown in Fig. \ref{fig:DE1}, with a base of
-sides $a=2.01\,\text{cm}$ \notaL{Cambié el número, de acuerdo a unas
-  mediciones de Cristian} and $b=1.48\,\text{cm}$, with an uncovered sample area
+sides $a=2.01\,\text{cm}$ and $b=1.48\,\text{cm}$, with an uncovered sample area
 of about $3\,\text{cm}^2$. The height of the liquid was set at
 $c=1\,\text{cm}$. The cathode was a
-platinum wire that with a diameter of $0.41\,\text{mm}$ insulated with
-teflon tape \notaL{Según Vivechna esto es falso: by a
-teflon cylinder of external diameter $\,2\text{mm}$}, with an uncovered
+platinum wire with a diameter of $0.41\,\text{mm}$ insulated with
+teflon tape, with an uncovered
 tip located at $\bm r_0=(x_0,
 y_0,z_0)=(0.2\,\text{cm},0.74\,\text{cm},0.9\,\text{cm})$. \notaL{Checa todos estos datos}
 We manufactured three samples $G_1$, $G_2$ and $G_3$ by applying a
@@ -589,19 +584,19 @@ $I_3=20\,\text{mA}$, respectively, during a time of $t=250s$.
 \label{sec:refl-meas}
 We measured the reflectivity spectra at different positions over our
 samples using a {\em Perkin Elmer Lambda 950}
-UV-Vis-NIR spectrophotometer.\notaL{Finalmente, ¿fue éste el que se
-  usó? Si sí, ¿hay algo internesante que decir sobre el? Cosas como el
-tamaño de mancha, resolución espectral, etc.} \notaC{Data collection absoluto
-reflectance mode. Spot size, physical setting, width (0.7mm) and length (2.0mm).
-Instrument setting, slit width (0.6mm). Method settings
-wavelength from(1400nm) to(300nm)}
+UV-Vis-NIR spectrophotometer in its data collection absolute
+reflectance mode, using a rectangular spot size of
+$0.7\text{mm}\times2.0\text{mm}$, a slit width of $0.6\text{mm}$ and
+a wavelength range from $1400\text{nm}$ to
+$300\text{nm}$.\notaL{Vivechna: puedes checar si así se reportan estos parámetros?}
 
- For interpretation of the data layer we used
-the standard formula \cite{stenzel2015physics} for the reflectance of three media:
-air (0) environment, the PS film (1) and the c-Si substrate (2),
- \begin{equation}\label{Eq:ECMR}
-   R=\left |\frac{r _ {_ {01}}r _ {_ {12}} e^{2i\psi}}{1+r _ {_
-   {01}}r _ {_ {12}} e^{2i\psi}}\right |^2
+For interpretation of the data we used
+the standard formula \cite{stenzel2015physics} for the reflectance of
+a three media system:
+an air environment  (0), the PS film (1) and the c-Si substrate (2),
+\begin{equation}\label{Eq:ECMR}
+  R=\left |\frac{r _ {_ {01}}r _ {_ {12}} e^{2i\psi}}{1+r _ {_
+        {01}}r _ {_ {12}} e^{2i\psi}}\right |^2
 \end{equation}
 where $r_{01}$ and $r_{12}$ are the Fresnel reflectance
 coefficients of the air/PS and PS/c-Si interfaces \cite{sattler2017silicon}
