--- a/paper.tex
+++ b/paper.tex
@@ -56,7 +56,8 @@ some graded single layer PS samples, measured their optical properties through
 ultraviolet-visible-near infrared reflectance
 spectroscopy, \notaL{Should we mention microscopy?}, and related them
 to their local porosity and thickness which, together with our model, were then used to obtain
-the $p$ vs. $j$ and $v$ vs. $j$ calibration curves. We corroborated
+the $p$ vs. $j$ and $v$ vs. $j$ calibration curves. 
+\notaV{Thickness was additionally viewed through scanning electron microscopy}. We corroborated
 our model by comparing the calibration curves for different samples. Thus, from
 measurements on only one, or a few simple systems, we may obtain full
 calibration curves which may be used to predict, design, and fabricate
@@ -76,7 +77,8 @@ which combine topographical features with index of refraction
 gradients \cite{pierscionek2012gradient}. Preparation of structures
 with gradients in other properties have also shown their
 usefulness. \notaL{I believe the examples below are unrelated to GRIN,
-  thats why I added the previous remark.} As an example, the
+  thats why I added the previous remark.} \notaV{Response : 
+ALL the examples are related to GRIN} As an example, the
 roughness dependent  response of cells has been tested on
 materials used applications in medical implants
 \cite{bai2020bioinspired}.
@@ -90,7 +92,7 @@ synthesis of  Ag-Au alloy gradients on steel and chemical composition
 gradients of CdS layers
 on gold electrodes have been obtained made by Shannon’s
 group\cite{wang2019fabrication}. \notaL{Is this Shannon a big shot, or
-  why should we name him?}
+  why should we name him?} \notaV{R : Eliminated the name}
 Among electrochemical methods, compositional and doping density changes
 in  conducting polymers have been used to produce gradients using Indium Tin
 Oxide electrodes \cite{inagi2010bipolar}
@@ -142,12 +144,19 @@ Additionally, gating of
 the optical response through a variation in pH of the solution was shown to
 trap/release biomolecules for possible drug delivery
 applications, given the biocompatible nature of PS, . \notaL{How is this related to the gradient?}
+\notaV{ The idea
+here was to mention the usefulness of GRIN in portion 
+size determination followed by its delivery through the variation of pH ; 
+If you find this comment too way off, further applicability of protein 
+size determination in drug delivery application can
+ be removed "ADDITIONALLY.....applications" }
 A similar asymmetric electrode configuration was used to fabricate
 multilayered optical filters with lateral a gradient
 \cite{li2005painting} and
 for developing ethanol sensors \cite{sailor2012porous}.
 Additionally it has been shown that the combination of thermal  oxidation  and
-infiltration of TiO2  by ALD \notaL{What is this acronym?} allows the manufacture
+infiltration of TiO2  by \notaV{Atomic Layer Deposition} (ALD) \notaL{What is this acronym?} 
+allows the manufacture
 of transparent GRIN
 optical elements with a high refractive index contrast \cite{ocier2017tunable}.
 Kruger et al. \cite{krueger2018electrochemical} used
@@ -177,12 +186,12 @@ multilayered GRIN structure. The structure of the paper is the
 following.
 \notaL{Check when finished}. In Section \ref{sec:theory} we develop a
 simple analytical model to calculate
-the current density at any point over the GRIN structure under preparaton.
+the current density at any point over the GRIN structure under preparation.
 In Section \ref{sec:procedures} we provide experimental details for the
 synthesis of porous silicon samples with lateral refractive index gradient.
 Section \ref{sec:discussion-results} includes experimental results and
-its comparison with numerically evaluated parameters. Finally, we
-devote Section \ref{sec:conclusions} to our concusions.
+it's comparison with numerically evaluated parameters. Finally, we
+devote Section \ref{sec:conclusions} to our conclusions.
 
 
 \section{Theory}
@@ -196,8 +205,9 @@ the current density, as well as the etching rate and the thickness of the
 porous layer. Nevertheless, it is challeging to measure the
 {\em local} value of $\bm j(\bm r)$ along the surface. This hampers the
 design and optimization of well characterized reproducible GRIN PS
-structures.\notaL{Tenemos referencias para afirmar esto?} Thus, we
-believe a
+structures.\notaL{Tenemos referencias para afirmar esto?}
+\notaV{NOT THAT I KNOW, so I changed the expression has been changed}
+ Thus, we believe a
 system for which the current density field may be
 easily computed would be useful.
 Though $\bm j(\bm r)$ may be numerically calculated for any
@@ -389,7 +399,11 @@ simple periodic lattice of charges using a fast convergent sum over the 2D
 reciprocal vectors \cite{nijboer1957calculation, nijboer1958internal,
   de_wette1965internal, watson1981madelung, grindlay1981k}
 \notaL{¿De qué se trata esta referencia que pusiste
-  aquí: \cite{kratzer2019basics}?}, then sum over the charges that form the basis
+  aquí: \cite{kratzer2019basics}?}, \notaC{Lo que quiero con este paper 
+es resaltar los Conceptos básicos de la cristalografía, 
+grupo de puntos cristalográficos, la red recíproca y algunos relaciones de la 
+zona de Brillouin.}
+then sum over the charges that form the basis
 of the 2D {\em crystal} plane, and finally sum over all the
  planes.
 
@@ -547,9 +561,10 @@ In Fig. \ref{fig:DE1} we show a schematic representation of our
 experimental setup to manufacture GRIN PS structures.
 As dicussed above, we fabricated an electrolytic cell with the shape of a
 rectangular prism on the bottom of which we place a Si wafer which makes
-electrical contact to a brass plate\notaC{ laton.}\notaL{Porqué
-  vivechna dice silver/copper? De qué era: latón, plata, cobre, una
-  aleación de cobre y plata? Era un alambre o una placa?}
+electrical contact to a silver plate\notaC{ plata.}\notaL{Porqué
+vivechna dice silver/copper? De qué era: latón, plata, cobre, una
+aleación de cobre y plata? Era un alambre o una placa?}
+\notaV{CRISTIAN :  POR FAVOR COLOCAS lo que usaste.}
 which together make the anode. The
 cathode consists of a platinum wire insulated except for a small region
 at its tip, which we take as a point current drain.
@@ -589,7 +604,7 @@ reflectance mode, using a rectangular spot size of
 $0.7\text{mm}\times2.0\text{mm}$, a slit width of $0.6\text{mm}$ and
 a wavelength range from $1400\text{nm}$ to
 $300\text{nm}$.\notaL{Vivechna: puedes checar si así se reportan estos parámetros?}
-
+\notaV{CHANGED}
 For interpretation of the data we used
 the standard formula \cite{stenzel2015physics} for the reflectance of
 a three media system:
@@ -962,6 +977,8 @@ that may be employed for other samples grown in the same conditions.
 WLM acknowledges the support of DGAPA-UNAM under grant
 IN111119. \notaL{Cristian debe agradecer a conacyt y faltan
   agradecimientos de Vivechna (quizás incluyendo al icf)}
+\notaV{ acknowledges support from CONACyT Basic Sciences project A-S1 30393, 
+PRODEP and ICF.}
 \bibliographystyle{unsrt}
 \bibliography{bibligrin} %Aquí ponen el nombre del archivo .bib
 \end{document}
